fixed+styled+added logic to booking#show, fixed+added spacing to user#show

--- a/app/assets/stylesheets/events/_search_form_two.scss
+++ b/app/assets/stylesheets/events/_search_form_two.scss
@@ -1,5 +1,5 @@
 .index-forms {
-    margin-top: 40px;
+    margin-top: 4px;
     width: 100%;
     padding-right: 0px !important;
     padding-left: 0px !important;
